# xiaoxins3

./: OTA_API_Documentation.md  README.md  sdkconfig.defaults
components/doit_blufi/: CMakeLists.txt  blufi_init.c  doit_blufi.c  doit_blufi.h
main/: CMakeLists.txt  Kconfig.projbuild
main/boards/common/: wifi_board.cc
main/boards/xiaoxin-esp32s3/: config.h  config.json  xiaoxin_esp32s3.cc
main/boards/xiaoxin-esp32s3-028/: config.h  config.json  xiaoxin_esp32s3_028.cc
main/boards/xiaoxin-esp32s3-096/: config.h  config.json  xiaoxin_esp32s3_096.cc
main/boards/xiaoxin-esp32s3-154/: config.h  xiaoxin_esp32s3_154.cc
main/boards/xiaoxin-esp32s3-154-4G/: config.h  power_manager.h  xiaoxin_esp32s3_154_4G.cc
main/boards/xiaoxin-esp32s3-154-wifi/: config.json  xiaoxin_esp32s3_154_wifi.cc
main/boards/xiaoxin-esp32s3-4G/: config.json  xiaoxin_esp32s3_4G.cc
main/boards/xiaoxin-esp32s3-lanka/: README_LED_CONTROL.md  config.h  config.json  xiaoxin_esp32s3_lanka.cc
main/boards/xiaoxin-esp32s3-touch/: config.h  xiaoxin_esp32s3_touch.cc
main/boards/xiaoxin-zhi/: README.md  config.h  config.json  moji_audio_codec.cc  moji_audio_codec.h  power_manager.h  xiaoxin_zhi.cc  xiaoxin_zhi.h
main/boards/xingzhi-cube-1.54tft-wifi/: config.h
main/led/: gpio_led.h
main/protocols/: mqtt_protocol.cc
